--- a/index.css
+++ b/index.css
@@ -53,6 +53,7 @@
 .dummy{
     text-decoration: none;
     color: white;
+    background-color: #161a22;
 }
 .commit-code{
     text-decoration: none;
